--- a/style.css
+++ b/style.css
@@ -189,6 +189,23 @@ nav.sticky .menu-btn{
   margin: 14px 0;
 }
 
+.home-content {
+    position: relative;
+  }
+
+  .school-logos {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    gap: 10px;
+  }
+
+  .school-logo {
+    width: 50px; /* Adjust the size as needed */
+    height: auto;
+  }
+
 /* About Section Styling */
 /* Those Elements Where We Have Apply Same CSS,
  I'm Selecting Directly 'Section Tag' and 'Class'  */
